[package]
name = "autogfw"
version = "0.1.0"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
once_cell = "1.2.0"
structopt = { version = "0.3.2", default_features = false }
parking_lot = "0.9.0"
ipnetwork = "0.15.1"
libc = "0.2.66"

[dependencies.pnet]
git = "https://github.com/bdbai/libpnet"
default_features = false
